# django-booking-proj

./: .gitignore  README.md  pyproject.toml
booking_service/feedback/: views.py
booking_service/feedback/templates/feedback/: feedback.html
booking_service/info/: urls.py  views.py
booking_service/info/templates/info/: about.html
booking_service/project/: settings.py  urls.py
booking_service/service/: admin.py  forms.py  models.py  urls.py  views.py
booking_service/service/migrations/: 0001_initial.py  0004_alter_service_slug.py  0005_alter_service_slug.py  0006_service_tags_servicecomment.py
booking_service/service/templates/service/: create.html  (+4 more)
booking_service/templates/: base.html  dashboard.html
booking_service/templates/includes/: comments.html  notifications.html  pagination.html  similar_services.html
booking_service/user/: forms.py  models.py  urls.py  views.py
booking_service/user/migrations/: 0001_initial.py  0002_alter_user_username.py
booking_service/users/: models.py  serializers.py
booking_service/users/migrations/: 0001_initial.py
src/comments/: models.py
src/feedback/: forms.py  models.py
src/feedback/migrations/: 0001_initial.py
src/project/: settings.py
src/service/: forms.py  models.py  urls.py  views.py
src/service/migrations/: 0002_alter_service_options_service_author_service_created_and_more.py  0003_alter_service_author.py  0007_serviceorder_2.py
src/templates/: base.html  dashboard.html
src/templates/includes/: comments.html  pagination.html  similar_services.html
src/user/: auth.py  forms.py  urls.py
(+40 files in other folders)
