[tool.poetry]
name = "django-booking-proj"
version = "0.1.0"
description = ""
authors = ["LazebnyA <oleksandrlazebnij8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
djangorestframework-simplejwt = "^5.3.1"
django-taggit = "^6.0.0"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
